# modality-router-kit

./: README.md  pyproject.toml
examples/: queries.jsonl
modality_router/: __init__.py  eval.py  router.py
scripts/: run_eval.py
tests/: test_router.py
